testdata/err/string_literal_bad_unicode.err.txt
error: illegal unicode code point: 0xffffffff
- testdata/err/string_literal_bad_unicode.tn:1:21
1 | main = || { "foo \u{ffffffff} bar \u{ffffffff} baz" };
  |                     ^^^^^^^^ bad code point
- testdata/err/string_literal_bad_unicode.tn:1:13
1 | main = || { "foo \u{ffffffff} bar \u{ffffffff} baz" };
  |             --------------------------------------- in this string literal
error: illegal unicode code point: 0xffffffff
- testdata/err/string_literal_bad_unicode.tn:1:38
1 | main = || { "foo \u{ffffffff} bar \u{ffffffff} baz" };
  |                                      ^^^^^^^^ bad code point
- testdata/err/string_literal_bad_unicode.tn:1:13
1 | main = || { "foo \u{ffffffff} bar \u{ffffffff} baz" };
  |             --------------------------------------- in this string literal
